--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Frontend</title>
+  <title>TO-DO</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  #TODO Favicon ändern
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+
+  </app-root>
 </body>
 </html>
